Fix for flickering of resized icons

--- a/design/index.css
+++ b/design/index.css
@@ -115,7 +115,7 @@ header a {
 
 
 main section {
-	padding: 12.5% 0px;
+	padding: 15% 0px;
 	text-align: center;
 }
 
@@ -123,7 +123,7 @@ main section article {
 	display: inline-block;
 	width: 28%;
 	max-width: 320px;
-	height: 480px;
+	height: 380px;
 	margin: 16px;
 	padding: 16px;
 	vertical-align: top;
@@ -133,35 +133,36 @@ main section article {
 
 main section article figure {
 	display: block;
+	width: 144px;
+	height: 144px;
+	margin: 16px auto;
+	text-align: center;
+}
+
+
+main section article figure div {
+	display: inline-block;
 	width: 112px;
 	height: 112px;
-	margin: 32px auto;
+	line-height: 112px;
+	font-size: 48px;
 	border: 8px solid #e0b113;
 	background: #ffe51f;
 	border-radius: 128px;
 	transition: all 250ms ease-out;
 }
 
-main section article:hover figure {
+main section article:hover figure div {
 	width: 96px;
 	height: 96px;
 	border: 16px solid #b33f40;
 	background: #d0494b;
-}
-
-main section article figure div {
-	line-height: 112px;
-	font-size: 48px;
-	transition: all 250ms ease-out;
-}
-
-main section article:hover figure div {
 	line-height: 96px;
 	font-size: 64px;
 }
 
 main section article h3 {
-	margin: 64px 0px;
+	margin: 32px 0px;
 	font-size: 32px;
 	text-align: center;
 	transition: all 250ms ease-out;
